[gd_scene load_steps=26 format=3 uid="uid://d4hu4jw6v772q"]

[ext_resource type="Script" uid="uid://b4vp6p8whfxdq" path="res://Scenes/object/interactable/generic_object.gd" id="1_8s67v"]
[ext_resource type="Script" uid="uid://c1whaq778qys2" path="res://Game Logic/object/obj_elevation_handler.gd" id="2_cerdv"]
[ext_resource type="Script" uid="uid://dglfk4q361l45" path="res://Game Logic/object/plants/plant_component_v2.gd" id="3_lbae0"]
[ext_resource type="Resource" uid="uid://ce57ixnk7vlqh" path="res://Resources/plants/oak.tres" id="4_t18mb"]
[ext_resource type="Script" uid="uid://dd8awtq2mqkmj" path="res://Game Logic/object/ageing_component.gd" id="5_0qg48"]
[ext_resource type="Script" uid="uid://e04v7sivkgq8" path="res://Game Logic/object/tool_component.gd" id="6_q4boj"]
[ext_resource type="Script" uid="uid://c72fhodjm4b2c" path="res://Game Logic/data/inventory/loot/loot_table_entry.gd" id="7_kkfl3"]
[ext_resource type="Resource" uid="uid://coc8478dbgool" path="res://Resources/items/stuff/timber.tres" id="8_035fv"]
[ext_resource type="Resource" uid="uid://2e81mj4x8ahl" path="res://Resources/items/stuff/foliage.tres" id="9_l2q5i"]
[ext_resource type="Script" uid="uid://dq4ap3sv81447" path="res://Game Logic/data/inventory/loot/loot_table.gd" id="10_8eqt5"]
[ext_resource type="Script" uid="uid://c3qmsruatmctk" path="res://Game Logic/object/interaction_hitbox.gd" id="11_8bky2"]
[ext_resource type="Script" uid="uid://bp4pf1bvr6hab" path="res://Game Logic/object/fade_overlap.gd" id="12_kh8xy"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_unlud"]
load_path = "res://.godot/imported/sketch_crap_1.png-bea57c075dc9a87edb56ffe3da19b943.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_834c7"]
atlas = SubResource("CompressedTexture2D_unlud")
region = Rect2(535, 721, 251, 320)

[sub_resource type="Resource" id="Resource_xvxcb"]
script = ExtResource("7_kkfl3")
chance = 1.0
item_data = ExtResource("8_035fv")
amount = 10

[sub_resource type="Resource" id="Resource_t2yds"]
script = ExtResource("7_kkfl3")
chance = 0.117
item_data = ExtResource("8_035fv")
amount = 1

[sub_resource type="Resource" id="Resource_sd00o"]
script = ExtResource("7_kkfl3")
chance = 1.0
item_data = ExtResource("9_l2q5i")
amount = 1
metadata/_custom_type_script = "uid://c72fhodjm4b2c"

[sub_resource type="Resource" id="Resource_pnun4"]
script = ExtResource("10_8eqt5")
loot_table_entries = Array[ExtResource("7_kkfl3")]([SubResource("Resource_xvxcb"), SubResource("Resource_t2yds"), SubResource("Resource_sd00o")])

[sub_resource type="Resource" id="Resource_unlud"]
script = ExtResource("7_kkfl3")
chance = 1.0
item_data = ExtResource("8_035fv")
amount = 1

[sub_resource type="Resource" id="Resource_834c7"]
script = ExtResource("7_kkfl3")
chance = 0.117
item_data = ExtResource("8_035fv")
amount = 1

[sub_resource type="Resource" id="Resource_fj1g5"]
script = ExtResource("7_kkfl3")
chance = 1.0
item_data = ExtResource("9_l2q5i")
amount = 1
metadata/_custom_type_script = "uid://c72fhodjm4b2c"

[sub_resource type="Resource" id="Resource_67wap"]
script = ExtResource("10_8eqt5")
loot_table_entries = Array[ExtResource("7_kkfl3")]([SubResource("Resource_unlud"), SubResource("Resource_834c7"), SubResource("Resource_fj1g5")])

[sub_resource type="CircleShape2D" id="CircleShape2D_s8677"]
radius = 29.0689

[sub_resource type="CircleShape2D" id="CircleShape2D_unlud"]
radius = 29.0689

[sub_resource type="CircleShape2D" id="CircleShape2D_834c7"]
radius = 110.01818

[node name="Oak1" type="Node2D"]
script = ExtResource("1_8s67v")
object_id = "plant_tree_oak0"

[node name="ObjElevationHandler" type="Node" parent="." node_paths=PackedStringArray("things_to_offset")]
script = ExtResource("2_cerdv")
things_to_offset = [NodePath("../Sprite2D"), NodePath("../ToolComponent"), NodePath("../Wall"), NodePath("../FadeOverlap")]
metadata/_custom_type_script = "uid://c1whaq778qys2"

[node name="PlantComponentV2" type="Node" parent="."]
script = ExtResource("3_lbae0")
plant_gen_data = ExtResource("4_t18mb")
next_stage_name = "plant_tree_oak2"

[node name="AgeingComponent" type="Node" parent="."]
script = ExtResource("5_0qg48")
metadata/_custom_type_script = "uid://dd8awtq2mqkmj"

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_834c7")
offset = Vector2(-12.61, -130.985)

[node name="ToolComponent" type="Node2D" parent="."]
script = ExtResource("6_q4boj")
hits_required = 5
loot_table_complete = SubResource("Resource_pnun4")
each_hit_grants_roll = true
single_hit_loot = SubResource("Resource_67wap")

[node name="InteractionHitbox" type="StaticBody2D" parent="ToolComponent"]
collision_layer = 4
collision_mask = 4
script = ExtResource("11_8bky2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolComponent/InteractionHitbox"]
shape = SubResource("CircleShape2D_s8677")

[node name="Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
shape = SubResource("CircleShape2D_unlud")

[node name="FadeOverlap" type="Area2D" parent="." node_paths=PackedStringArray("overlap_object")]
collision_layer = 129
collision_mask = 129
script = ExtResource("12_kh8xy")
overlap_object = NodePath("../Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FadeOverlap"]
position = Vector2(0, -158)
shape = SubResource("CircleShape2D_834c7")

[connection signal="body_entered" from="FadeOverlap" to="FadeOverlap" method="_on_body_entered"]
[connection signal="body_exited" from="FadeOverlap" to="FadeOverlap" method="_on_body_exited"]
